--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.12.2",
+    "axios": "^0.26.1",
     "pinia": "^2.0.9",
     "quasar": "^2.4.4",
     "vue": "^3.2.26",
